# agentic-BI-copilot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.codex/skills/bi-metric/: SKILL.md
.codex/skills/bi-metric/agents/: openai.yaml
.codex/skills/database-setup/: SKILL.md
.codex/skills/database-setup/agents/: openai.yaml
.codex/skills/evaluation/: SKILL.md
.codex/skills/evaluation/agents/: openai.yaml
.codex/skills/metadata-retrieval/: SKILL.md
.codex/skills/prompt-engineering/: SKILL.md
.codex/skills/sql-validator/: SKILL.md
.codex/skills/workflow-node/: SKILL.md
.github/workflows/: ci.yml
data/metadata/: metric_glossary.yaml  table_descriptions.yaml
db/: create_readonly_user.sql  indexes.sql  schema.sql  views.sql
docs/agent-guides/: architecture.md  database-setup.md  deletion-candidates.md  known-gaps.md  metadata-and-metrics.md  project-local-skills.md  runtime-agents-and-prompts.md  sql-safety.md  testing-and-evaluation.md  workflow-state-and-graph.md
notebooks/: testing.ipynb
scripts/: create_readonly_user.py  load_postgres.py
src/bi_copilot/agents/: base.py  planner_agent.py  reporter_agent.py  sql_agent.py  verifier_agent.py
src/bi_copilot/graph/: state.py
src/bi_copilot/llms/: router.py
src/bi_copilot/mcp/: client.py
src/bi_copilot/prompts/: planner.md  reporter.md  sql_generator.md  verifier.md
src/bi_copilot/tools/: database.py  metadata.py  sql_query_guard.py
tests/evaluation/: basic_questions.json
tests/unit/: test_sql_validator.py
(+6 files in other folders)
